# praefectus

./: .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  deny.toml
.github/workflows/: ci.yml
plugins/hermes/: README.md  __init__.py  plugin.yaml  requirements-dev.txt  test_plugin.py
plugins/openclaw/: README.md  cli.test.ts  cli.ts  index.test.ts  index.ts  license-check.ts  openclaw.plugin.json  package.json
src/: cdp.rs  lib.rs  linux_atspi.rs  linux_input.rs  main.rs  semantic.rs  windows_acl.rs  windows_uia.rs
tests/: cli.rs  live_macos.rs  native_input.rs  protocol.rs  test_input_macos.rs
