[package]
name = "praefectus"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "ISC"
description = "Policy-neutral, durable desktop action execution protocol"
readme = "README.md"
repository = "https://github.com/tschk/praefectus"
homepage = "https://github.com/tschk/praefectus"
documentation = "https://docs.rs/praefectus"
include = [
    "/src/**",
    "/tests/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/ACKNOWLEDGEMENTS.md",
    "/THIRD_PARTY_LICENSES.md",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "praefectus"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
fs2 = "0.4"
hex = "0.4"
rs_peekaboo = "=0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.23"
