[package]
name = "praefectus"
version = "0.3.0"
edition = "2024"
rust-version = "1.87"
license = "ISC"
description = "Policy-neutral, durable desktop action execution protocol"
readme = "README.md"
repository = "https://github.com/tschk/praefectus"
homepage = "https://github.com/tschk/praefectus"
documentation = "https://docs.rs/praefectus"
include = [
    "/src/**",
    "/tests/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/ACKNOWLEDGEMENTS.md",
    "/THIRD_PARTY_LICENSES.md",
    "/deny.toml",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "praefectus"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
fs2 = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tungstenite = { version = "0.30", default-features = false, features = ["handshake"] }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-graphics = "0.25"
core-foundation = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
atspi = { version = "0.30", default-features = false, features = ["proxies", "zbus"] }
rustix = { version = "1.1", default-features = false, features = ["net", "process", "std"] }
x11rb = { version = "0.14", default-features = false, features = ["randr", "xtest"] }
zbus = { version = "=5.18.0", default-features = false, features = ["async-io", "blocking-api"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.23"
